# pixeldrain-rs

./: Cargo.toml  LICENSE-MIT  Makefile  README.md  crates.js  deny.toml  help.html  settings.html  src-files.js
.github/workflows/: CI.yml  Nightly.yml  RustDoc.yml
pixeldrain/: Cargo.toml  all.html  enum.Error.html  index.html  sidebar-items.js  struct.Body.html  struct.Client.html  struct.FileInfo.html  struct.FileUpload.html  struct.ListUserFilesResponse.html  struct.UploadFileResponse.html
pixeldrain-cli/: Cargo.toml  build.rs
pixeldrain-cli/src/: commands.rs  config.rs  main.rs
pixeldrain-cli/src/commands/: config.rs  get.rs  list_user.rs  upload.rs
pixeldrain/client/: struct.Client.html
pixeldrain/model/file_info/: struct.FileInfo.html
pixeldrain/model/list_user_files/: struct.ListUserFilesResponse.html
pixeldrain/model/upload_file/: struct.UploadFileResponse.html
pixeldrain/src/: client.rs  lib.rs  model.rs
pixeldrain/src/model/: file_info.rs  list_user_files.rs  upload_file.rs
search.index/: 11f3c3ca1adc.js  1b736c84efd2.js  3fe73c8b40f6.js  6fbe358b9ef6.js  root.js
search.index/crateNames/: 772aa95f0356.js
search.index/desc/: 4529d80de8d2.js
search.index/entry/: a0c05d3340e6.js
search.index/function/: f4db33c87852.js
search.index/generic_inverted_index/: 1ad0356823c1.js
search.index/name/: 323f80e5c21a.js
search.index/normalizedName/: 56b90ed917d1.js
search.index/path/: f5a13b16d943.js
search.index/type/: f14b5abdefc1.js
src/pixeldrain/: client.rs.html  lib.rs.html  model.rs.html
src/pixeldrain/model/: file_info.rs.html  (+2 more)
(+14 files in other folders)
