[package]
name = "pixeldrain"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.13.3", features = [ "http2", "json", "stream" ], default-features = false }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [ "fs" ] }
tokio-util = "0.7.18"

[dev-dependencies]
tokio = { version = "1.52.1", features = [ "macros" ] }

[features]
default = [ "rustls" ]
native-tls = [ "reqwest/native-tls" ]
rustls = [ "reqwest/rustls" ]
